attached_assets/Pasted-Error-initializing-admin-user-ErrorEvent-binaryType-arraybuffer-closeCode-1006--1761895839944_1761895839945.txt
Error initializing admin user: ErrorEvent {
    _binaryType: 'arraybuffer',
    _closeCode: 1006,
    _closeFrameReceived: false,
    },
    _autoPong: true,
    _eventsCount: 4,
    _paused: false,
    _url: 'wss://postgres.railway.internal/v2',
    _maxListeners: undefined,
    _protocol: '',
    _closeFrameSent: false,
    _req: null,
    _closeMessage: <Buffer >,
    _readyState: 3,
    _sender: null,
  [Symbol(kTarget)]: WebSocket {
    _closeTimer: null,
    _receiver: null,
    _errorEmitted: true,
    _socket: null,
    _extensions: {},
    _events: [Object: null prototype] {
    _bufferedAmount: 0,
      error: [Function],
    _isServer: false,
    _redirects: 0,
      message: [Function],
      close: [Function],
      open: [Function]
    [Symbol(shapeMode)]: false,
    [Symbol(kCapture)]: false
  },
  [Symbol(kType)]: 'error',
  [Symbol(kError)]: AggregateError [ECONNREFUSED]: 
      at internalConnectMultiple (node:net:1134:18)
      at afterConnectMultiple (node:net:1715:7) {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  },
  [Symbol(kMessage)]: ''
}
file:///app/node_modules/@neondatabase/serverless/index.mjs:1345
o?t(o):n(u)},"cb"),s=new r(function(o,u){n=o,t=u}).catch(o=>{throw Error.captureStackTrace(
                                                                         ^
ErrorEvent {
  [Symbol(kTarget)]: WebSocket {
    _events: [Object: null prototype] {
      error: [Function: onError] {
        [Symbol(kIsForOnEventAttribute)]: false,
        [Symbol(kListener)]: [Function (anonymous)]
      },
      message: [Function: onMessage] {
        [Symbol(kIsForOnEventAttribute)]: false,
        [Symbol(kListener)]: [Function (anonymous)]
    _sender: null,
      },
    _socket: null,
      close: [Function: onClose] {
    _bufferedAmount: 0,
        [Symbol(kIsForOnEventAttribute)]: false,
        [Symbol(kListener)]: [Function (anonymous)]
      },
      open: [Function: onOpen] {
    _isServer: false,
    _redirects: 0,
        [Symbol(kIsForOnEventAttribute)]: false,
        [Symbol(kListener)]: [Function: handleWebSocketOpen]
      }
    },
    _eventsCount: 4,
    _maxListeners: undefined,
    _binaryType: 'arraybuffer',
    _closeCode: 1006,
Node.js v22.21.1
    _closeFrameReceived: false,
    _closeFrameSent: false,
  },
      }
    _closeMessage: Buffer(0) [Uint8Array] [],
  [Symbol(kMessage)]: ''
    _closeTimer: null,
    ]
}
    _errorEmitted: true,
    _extensions: {},
    _paused: false,
    _protocol: '',
    _readyState: 3,
    _receiver: null,
        syscall: 'connect',
        address: '10.155.111.203',
        port: 443
    _autoPong: true,
    _url: 'wss://postgres.railway.internal/v2',
    _req: null,
    [Symbol(shapeMode)]: false,
    [Symbol(kCapture)]: false
  },
  [Symbol(kType)]: 'error',
  [Symbol(kError)]: AggregateError [ECONNREFUSED]: 
      at internalConnectMultiple (node:net:1134:18)
      at afterConnectMultiple (node:net:1715:7) {
    code: 'ECONNREFUSED',
    [errors]: [
      Error: connect ECONNREFUSED fd12:3ed2:e781:1:2000:5d:8a9b:6fcb:443
          at createConnectionError (node:net:1678:14)
          at afterConnectMultiple (node:net:1708:16) {
        errno: -111,
        code: 'ECONNREFUSED',
        syscall: 'connect',
        address: 'fd12:3ed2:e781:1:2000:5d:8a9b:6fcb',
        port: 443
      },
      Error: connect ECONNREFUSED 10.155.111.203:443
          at createConnectionError (node:net:1678:14)
          at afterConnectMultiple (node:net:1708:16) {
        errno: -111,
        code: 'ECONNREFUSED',